# llm-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml
observability/: README.md  loki-config.yml  prometheus.yml  promtail-config.yml
observability/grafana/dashboards/: llm-gateway.json  openai-proxy.json
observability/grafana/provisioning/dashboards/: dashboards.yml
src/: config.rs  handlers.rs  main.rs  metrics.rs  queue.rs
