[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
rand = "0.8"
uuid = { version = "1.11", features = ["v4"] }
